[project]
name = "khoai"
version = "0.1.1.post15"
description = "A simple Python package for example purposes."
authors = [
    { name="Lê Huỳnh Đức", email="lhduc94@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "matplotlib>=3.7.5",
    "networkx>=3.1",
    "numpy>=1.24.4",
    # Add your project dependencies here, e.g. "requests"
    "pandas>=2.0.3",
    "seaborn>=0.13.2",
]

[project.urls]
"Homepage" = "https://pypi.org/project/khoai/"
"Repository" = "https://github.com/lhduc94/khoai"
